# modd

./: Makefile  README.md  dune-project  modd.opam
lib/: dune  modd.ml
lib/modd_interpreter/: dune  import.ml  interpreter.ml  modd_interpreter.ml  runtime.ml
lib/modd_parsing/: ast_types.ml  dune  lexer.mll  modd_parsing.ml  parser.mly  parsetree.ml
lib/modd_typing/: dune  import.ml  modd_typing.ml  typedtree.ml  types.ml
test/: dune
